NodeLIstPractice/compiling_error.txt
In file included from /home/honorio/atom2018spring/NodeLIstPractice/List.cpp:2:0:
/home/honorio/atom2018spring/NodeLIstPractice/List.h:9:1: error: new types may not be defined in a return type
 class List{
 ^~~~~
/home/honorio/atom2018spring/NodeLIstPractice/List.h:9:1: note: (perhaps a semicolon is missing after the definition of ‘List’)
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:5:12: error: return type specification for constructor invalid
 List::List()
            ^
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp: In constructor ‘List::List()’:
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:6:18: error: class ‘List’ does not have any field named ‘curr’
 : head(nullptr), curr(nullptr), temp(nullptr)
                  ^~~~
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:6:33: error: class ‘List’ does not have any field named ‘temp’
 : head(nullptr), curr(nullptr), temp(nullptr)
                                 ^~~~
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp: At global scope:
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:10:1: error: redefinition of ‘List::List()’
 List::List(){
 ^~~~
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:5:1: note: ‘List::List()’ previously defined here
 List::List()
 ^~~~
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:13:16: error: no ‘int List::size()’ member function declared in class ‘List’
 int List::size(){
                ^
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp: In function ‘bool empty()’:
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:17:10: error: ‘size’ was not declared in this scope
   return(size = 0);
          ^~~~
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp: In function ‘int headContents()’:
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:20:10: error: ‘head’ was not declared in this scope
   return head->data;
          ^~~~
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp: In member function ‘void List::pushFront(int)’:
/home/honorio/atom2018spring/NodeLIstPractice/List.cpp:25:22: error: ‘data’ was not declared in this scope
   Node* n = new Node(data);
                      ^~~~
